--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "feedback",
+  "name": "feedback-spark-ide",
   "main": "./lib/feedback",
   "version": "0.33.0",
   "private": true,
-  "description": "Sends feedback to atom@github.com",
-  "repository": "https://github.com/atom/feedback",
+  "description": "Sends feedback to ide@spark.io",
+  "repository": "https://github.com/spark/feedback-spark-ide",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
